[package]
name = "ellipsis-macros"
version = "0.1.2"
edition = "2021"
description = "Ellipsis Solana Macros"
license = "Apache-2.0"


[lib]
proc-macro = true

[dependencies]
solana-program = "2"
bs58 = "0.4.0"
proc-macro2 = "1.0.19"
quote = "1.0"
rustversion = "1.0.7"
syn = { version = "1.0", features = ["full", "extra-traits"] }
